fixes IE layout bug

--- a/docs/theme/static/styles/_misc_sitewide.less
+++ b/docs/theme/static/styles/_misc_sitewide.less
@@ -59,6 +59,9 @@ footer {
 		width: 100px;
 		padding:0;
 		text-align: center;
+		img {
+			width: 100%;
+		}
 		@media(max-width: @screen-xs-max){
 			width: 100%;
 			img {
